# kubemap

./: README.md  cli.py  pyproject.toml
.github/workflows/: build.yaml
assets/: access.yaml
handler/: Dockerfile  go.mod  main.go
kubemap/: config.py  graph.py  logs.py  namespaces.py  parser.py  patch.py  pod_info.py  pods.py
