[tool.poetry]
name = "kubemap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^28.1.0"
requests = "^2.32.4"
click = "^8.1.7"
networkx = "^3.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
